# cmd/api/main.go
@@ -6,15 +6,15 @@ import (
 	"strings"
 	"time"
 
-	"github.com/ahmadeko2017/backed-golang-tugas-1/internal/handler"
-	"github.com/ahmadeko2017/backed-golang-tugas-1/internal/middleware"
-	"github.com/ahmadeko2017/backed-golang-tugas-1/internal/repository"
-	"github.com/ahmadeko2017/backed-golang-tugas-1/internal/service"
-	"github.com/ahmadeko2017/backed-golang-tugas-1/pkg/config"
-	"github.com/ahmadeko2017/backed-golang-tugas-1/pkg/database"
+	"github.com/ahmadeko2017/backed-golang-tugas/internal/handler"
+	"github.com/ahmadeko2017/backed-golang-tugas/internal/middleware"
+	"github.com/ahmadeko2017/backed-golang-tugas/internal/repository"
+	"github.com/ahmadeko2017/backed-golang-tugas/internal/service"
+	"github.com/ahmadeko2017/backed-golang-tugas/pkg/config"
+	"github.com/ahmadeko2017/backed-golang-tugas/pkg/database"
 	"github.com/gin-gonic/gin"
 
-	_ "github.com/ahmadeko2017/backed-golang-tugas-1/docs" // This will be generated by swag init
+	_ "github.com/ahmadeko2017/backed-golang-tugas/docs" // This will be generated by swag init
 )
 
 // @title           Category API
@@ -41,6 +41,10 @@ func main() {
 	productRepo := repository.NewProductRepository(database.DB)
 	productService := service.NewProductService(productRepo, categoryRepo)
 	productHandler := handler.NewProductHandler(productService)
+	// Setup Transaction Dependencies
+	transactionRepo := repository.NewTransactionRepository(database.DB)
+	transactionService := service.NewTransactionService(transactionRepo, productRepo)
+	transactionHandler := handler.NewTransactionHandler(transactionService)
 
 	// Setup Router
 	r := gin.Default()
@@ -93,6 +97,7 @@ func main() {
 		c.String(http.StatusOK, html)
 	})
 	r.GET("/swagger/doc.json", func(c *gin.Context) {
+		c.Header("Cache-Control", "no-cache, no-store, must-revalidate")
 		c.File("./docs/swagger.json")
 	})
 
@@ -113,6 +118,13 @@ func main() {
 		p.GET("/:id", productHandler.GetProductByID)
 		p.PUT("/:id", productHandler.UpdateProduct)
 		p.DELETE("/:id", productHandler.DeleteProduct)
+	}
+
+	api := r.Group("/api")
+	{
+		api.POST("/checkout", transactionHandler.Checkout)
+		api.GET("/report/hari-ini", transactionHandler.ReportHariIni)
+		api.GET("/report", transactionHandler.ReportRange)
 	}
 
 	// Redirect 404
